@@ -103,6 +103,7 @@ public abstract class SpellingCheckRule extends Rule {
 
   /**
    * Reset the list of words to be ignored, by re-loading it from the "ignore.txt" file.
+   * @deprecated deprecated since 2.9
    */
   public void resetIgnoreTokens() {
     wordsToBeIgnored.clear();
