@@ -43,6 +43,8 @@ LanguageTool Change Log
     -Removed (Default)ResourceDataBroker.setResourceDir() and setRulesDir()
      as these can be set with the constructor
     -Cleaned up up class Contributor, e.g. removing getRemark()
+    -Category.setDefaultOff() has been removed, this can be set via constructor now
+    -Other small API cleanups that shouldn't affect the common use cases
 
 -Embedded server:
     -XML escaping has been fixed, this could cause invalid XML documents
